--- a/src/pages/makeapaymenthome/makeapaymenthome.scss
+++ b/src/pages/makeapaymenthome/makeapaymenthome.scss
@@ -1,3 +1,9 @@
 page-makeapaymenthome {
+    .label-right{
+        order: 2
+    }
+    .card-md .item-inner { border-bottom: 1px solid #dedede !important; 
+    }
+
 
 }
