update main nav, unify make a payment and add a card into one multi-use virtual terminal page. Rebuilt Get PAid Page logged in. added get paid to main nav

--- a/src/pages/makeapaymenthome/makeapaymenthome.scss
+++ b/src/pages/makeapaymenthome/makeapaymenthome.scss
@@ -5,5 +5,7 @@ page-makeapaymenthome {
     .card-md .item-inner { border-bottom: 1px solid #dedede !important; 
     }
 
-
+    .item-md {
+        background-color: #fff;
+     }
 }
