--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -8,7 +8,7 @@
 // the Sass variables found in Ionic's source scss files.
 
 $text-color: #4c6df9;
-$background-color: #fff;
+$background-color: #ccc;
 
 // Named Color Variables
 // --------------------------------------------------
