--- a/src/pages/trips/trips.scss
+++ b/src/pages/trips/trips.scss
@@ -27,4 +27,21 @@ page-trips,
   .item-md {
     background-color: #fff;
  }
+ .header .col {
+  background-color:lightgrey;
+}
+
+.col {
+  border: solid 1px grey;
+  border-bottom-style: none;
+  border-right-style: none;
+}
+
+.col:last-child {
+  border-right: solid 1px grey;
+}
+
+.row:last-child .col {
+  border-bottom: solid 1px grey;
+}
 }
