--- a/src/pages/makeapaymenthome/makeapaymenthome.scss
+++ b/src/pages/makeapaymenthome/makeapaymenthome.scss
@@ -25,4 +25,9 @@ page-makeapaymenthome {
       .row:last-child .col {
         border-bottom: solid 1px grey;
       }
+      .button-small-md {
+        height: 2.1em;
+        font-size: 1.1rem;
+        padding: 0 0.9em;
+      }
 }
