--- a/src/pages/trips/trips.scss
+++ b/src/pages/trips/trips.scss
@@ -44,4 +44,9 @@ page-trips,
 .row:last-child .col {
   border-bottom: solid 1px grey;
 }
+.button-small-md {
+  height: 2.1em;
+  font-size: 1.1rem;
+  padding: 0 0.9em;
+}
 }
