--- a/src/pages/local-weather/local-weather.scss
+++ b/src/pages/local-weather/local-weather.scss
@@ -1,3 +1,12 @@
 page-local-weather {
-    
+    .item-cover {
+        left: 0;
+        top: 0;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: #f8f7f7e8;
+        cursor: pointer;
+        z-index: -2;
+    }
 }
