final bulk changes before handing off

--- a/src/pages/makeapaymenthome/makeapaymenthome.scss
+++ b/src/pages/makeapaymenthome/makeapaymenthome.scss
@@ -30,4 +30,12 @@ page-makeapaymenthome {
         font-size: 1.1rem;
         padding: 0 0.9em;
       }
+      .searchbar-md {
+        background: inherit;
+        padding: 0px;
+      }
+      .searchbar-md .searchbar-input {
+        border-radius: 8px;
+      }
+     
 }
