--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,7 +6,7 @@
         <ion-row>
           <ion-col col-4>
               <div class="user-avatar">
-                <img src="../assets/img/avatar.jpeg">
+                <img src="../assets/img/avatar.png">
               </div>
           </ion-col>
           <ion-col padding-top col-8>
@@ -37,13 +37,17 @@
     </ion-toolbar>
   </ion-header>
 
-  <ion-content color="primary">
+  <ion-content style="background: #5698a9;">
 
     <ion-list class="user-list">
-      <button ion-item menuClose class="text-1x" *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)">
-        <ion-icon item-left [name]="menuItem.icon" color="primary"></ion-icon>
-        <span ion-text color="primary">{{menuItem.title}}</span>
+      <button ion-item menuClose class="text-1x" *ngFor="let menuItem of appMenuItems" (click)="openPage(menuItem)" style="background-color: transparent;">
+        <ion-icon item-left [name]="menuItem.icon" color="white"></ion-icon>
+        <span ion-text color="white">{{menuItem.title}}</span>
       </button>
+      <button ion-item menuClose class="text-1x" onClick="alert('This will open a new tab in your web browser.');return window.open('https://premium.paidyet.com/merchant', '_system',);" style="background-color: transparent;">
+          <ion-icon item-left name="person" color="white"></ion-icon>
+          <span ion-text color="white">Account</span>
+        </button>
     </ion-list>
   </ion-content>
 
