--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -297,11 +297,10 @@ ion-navbar.no-border {
 
 // style for auth pages
 .auth-page {
-  background-color: #fff;
+  background-color: #50a2f6 ;
   &::after {
     content: "";
-    background: url("../assets/img/bg.jpg") no-repeat;
-    background-size: cover;
+    background: url("https://storage.googleapis.com/paidyet-website-includes/images/base-header-overlay.png") repeat top left;
     top: 0;
     left: 0;
     bottom: 0;
@@ -320,11 +319,11 @@ ion-navbar.no-border {
       width: 86%;
 
       .logo {
-        width: 60px;
+        //width: 60px;
         height: 60px;
         margin: 20px auto 0;
         border-radius: 10%;
-        background: url("../assets/img/ionic3-ico.png") no-repeat;
+        background: url("../assets/img/paidyet-logo.png") no-repeat;
         background-size: 100%;
       }
 
@@ -546,3 +545,9 @@ ion-icon[ng-reflect-disabled="true"] {
   animation-name: fadeInDown;
 }
 
+.content-md {
+  
+  background-color: #4c6df9;
+  background: url(https://www.ndmscorp.com/images/slider/notgeneric_bg3.jpg?v=1.00) no-repeat bottom center;
+  background-position-y: -320px;
+}
