--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,6 +17,15 @@ page-home,
   .big {
     height: 5.6rem;
   }
+  .logo {
+    margin: auto -32px;
+    border-radius: 10%;
+    background: url(../assets/img/paidyet-logo.png) no-repeat center;
+    background-size: 62%;
+    height: 44px;
+    width: 100%;
+  }
+
 }
 
 
