--- a/src/pages/local-weather/local-weather.scss
+++ b/src/pages/local-weather/local-weather.scss
@@ -9,4 +9,8 @@ page-local-weather {
         cursor: pointer;
         z-index: -2;
     }
+    ion-item {
+        background-color: #e1e1e1 !important;
+        border-radius: 6px !important;
+    }
 }
