--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,39 @@
 page-login,
 .login {
+    input {
+        background-color: rgb(255, 255, 255);
+        padding: 10px;
+        margin: 0px;
+        border-radius: 6px;
+    }
+    .item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+        margin-left: 0;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        width: 100%;
+    }
+    .auth-page .scroll-content .login-content .list-form ion-item ion-label {
+        font-size: 1em;
+        color: #ffffff;
+    }
+    .text-primary {
+        color: #fff;
+    }
+    .text-md-secondary {
+        color: #fff;
+    }
+    .btn-gplus:hover {
+        background-color: #a8350b;
+    }
+    .logo {
+        //width: 60px;
+        height: 75px !important;
+        margin: 20px auto 0;
+        border-radius: 10%;
+        background: url("../assets/img/paidyet-logo.png") no-repeat;
+        background-size: 100%;
+      }
+      .item-md.item-block .item-inner {
+    padding-right: 0px;
+    }
 }
