--- a/src/pages/sendpay-filled/sendpay-filled.scss
+++ b/src/pages/sendpay-filled/sendpay-filled.scss
@@ -2,4 +2,19 @@ page-sendpay-filled {
     .item-md {
         background-color: #fff;
      } 
+     ion-input {
+        background-color: #e1e1e1 !important;
+        border-radius: 6px !important;
+        padding: 5px;
+    }
+    ion-item {
+        padding: 0px !important;
+    }
+    .item-inner {
+        padding-right: 0px !important;
+    }
+    .item-md-primary, .item-divider-md-primary {
+        color: #4c6df9;
+        
+    }
 }
