--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -7,8 +7,8 @@
 // To customize the look and feel of this app, you can override
 // the Sass variables found in Ionic's source scss files.
 
-$text-color: #4c6df9;
-$background-color: #ccc;
+$text-color: #fff;
+$background-color: #4c6df9;
 
 // Named Color Variables
 // --------------------------------------------------
@@ -23,7 +23,12 @@ $colors: (
   secondary: #5b5ef4,
   danger: #f53d3d,
   light: #75C4FD,
-  dark: #0039a2
+  dark: #0039a2,
+  green: #8ad467,
+  red: #ce5b4c,
+  verydark: #335271,
+  white: #ffffff,
+  transparent: transparent,
 );
 
 // App Theme
