final changes that todd wanted

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,19 +11,14 @@
           </ion-col>
           <ion-col padding-top col-8>
             <h2 ion-text class="no-margin bold text-white">
-              PaidYET User
+              Merchant Name
             </h2>
-            <span ion-text color="light">Customer</span>
+            <span ion-text color="light">xyz.paidyet.com</span>
           </ion-col>
         </ion-row>
 
         <ion-row no-padding class="other-data">
-          <ion-col no-padding class="column">
-            <button ion-button icon-left small full color="light" menuClose disabled>
-              <ion-icon name="contact"></ion-icon>
-              Edit Profile
-            </button>
-          </ion-col>
+          
           <ion-col no-padding class="column">
             <button ion-button icon-left small full color="light" menuClose (click)="logout()">
               <ion-icon name="log-out"></ion-icon>
