last last changes from todd

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -17,7 +17,7 @@
           </ion-col>
         </ion-row>
 
-        <ion-row no-padding class="other-data">
+        <ion-row no-padding class="other-data hide">
           
           <ion-col no-padding class="column">
             <button ion-button icon-left small full color="light" menuClose (click)="logout()">
