--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -29,6 +29,8 @@ $colors: (
   verydark: #335271,
   white: #ffffff,
   transparent: transparent,
+  black: #000000,
+  grey: #868585,
 );
 
 // App Theme
